# World-Generation

./: .env.example  .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml  show_chunks.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image-verification.yml  scan-docker-image.yml  super-linter.yml
src/: biome.rs  city.rs  color.rs  config.rs  elevation.rs  font.rs  image_gen.rs  island.rs  lib.rs  main.rs  map_gen.rs  save.rs  terrain.rs  tile.rs  world.rs
src/biome/: city_resources.rs  generation.rs  gold.rs  mod.rs
src/biome/defs/: beach.rs  coast.rs  deep_harbor.rs  desert.rs  far_land.rs  forest.rs  highlands.rs  hills.rs  mod.rs  mountains.rs  ocean.rs  plains.rs  sacred_grove.rs  snowy_peaks.rs  swamp.rs  tundra.rs  valley.rs
src/village/: mod.rs  placement.rs  trade.rs
static/: debug.css  debug.html  debug.js  index.html  night-mode.js  style.css  viewer.js
