[package]
name = "world_generator"
version = "0.1.0"
edition = "2021"
default-run = "world_generator"

[lib]
name = "world_generator"
path = "src/lib.rs"

[dependencies]
rand = "0.10.0"
noise = "0.9.0"
rayon = "1.7"
flate2 = "1"
png = "0.18.1"
tiny_http = "0.12"
dotenvy = "0.15.7"

[profile.dev]
opt-level = 0

[profile.dev.package.noise]
opt-level = 3

[profile.dev.package.rayon]
opt-level = 3

[profile.dev.package.rayon-core]
opt-level = 3

[profile.dev.package.flate2]
opt-level = 3

[profile.dev.package.png]
opt-level = 3

[profile.dev.package.rand]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
overflow-checks = false

[profile.dist]
inherits = "release"
lto = "fat"
strip = true
